--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <h1>Rugged Scotland</h1>
         <nav>
             <ul>
                 <img class="logo" src="images/logo.png" alt="rugged scotland" type="logo">
